Dato un nome ad ogni activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Login</string>
+    <string name="activityStoccaggio">Stoccaggio</string>
+    <string name="activityRegistrazione">Registrazione</string>
+    <string name="activityRaccolta">Raccolta</string>
+    <string name="activityHomepage">Homepage</string>
 </resources>
