--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="activityHomepage">Homepage</string>
     <string name="activityIrrigazione">Irrigazione</string>
     <string name="googleMaps">google_maps_key</string>
+    <string name="activityDatiCampo">DatiCampo</string>
 </resources>
