--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,7 @@
     <string name="activityRaccolta">Raccolta</string>
     <string name="activityHomepage">Homepage</string>
     <string name="activityIrrigazione">Irrigazione</string>
-<<<<<<< HEAD
-    <string name="google_maps_key">google_maps_key</string>
-=======
-    <string name="googleMaps">google_maps_key</string>
+    <string name="googleMaps">AIzaSyC9B8rjg-j3n6egarVpmr_GaIpT0pSNmH4</string>
     <string name="activityDatiCampo">DatiCampo</string>
->>>>>>> 7d61f4ff19db30ed194294af6b5ac7384c1243aa
+
 </resources>
