--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="activityIrrigazione">Irrigazione</string>
     <string name="googleMaps">AIzaSyC9B8rjg-j3n6egarVpmr_GaIpT0pSNmH4</string>
     <string name="activityDatiCampo">DatiCampo</string>
+    <string name="activityNomeSolco">NuovoSolco</string>
+    <string name="activityDatiCampo2">DatiCampo2</string>
 </resources>
