--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="activityDatiCampo">DatiCampo</string>
     <string name="activityNomeSolco">NuovoSolco</string>
     <string name="activityDatiCampo2">DatiCampo2</string>
+    <string name="activitySemina">Semina</string>
 </resources>
