--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Smart Farming</string>
-    <string name="activityMain">Login</string>
+    <string name="activityMain">Smart Farming</string>
     <string name="activityStoccaggio">Stoccaggio</string>
     <string name="activityRegistrazione">Registrazione</string>
     <string name="activityRaccolta">Raccolta</string>
